# helmet_plate_recognition

./: .gitignore  README.md  SETUP.md  analyze_performance.py  app.py  debug_pipeline.py  predict.py  pyproject.toml  requirements.txt  test_plate_only.py  train.py
src/: __init__.py
src/core/: __init__.py  helmet_detector.py  image_processor.py  plate_detector.py  plate_reader.py  spatial_matching.py
src/tests/: test_pipeline.py  test_plate_only.py
src/training/: __init__.py  dataset_downloader.py  trainer.py
src/utils/: __init__.py  image_annotator.py  performance_analyzer.py  report_generator.py  training_analyzer.py
templates/: index.html
